--- a/Core/AnBo.BCL8.Core.csproj
+++ b/Core/AnBo.BCL8.Core.csproj
@@ -7,4 +7,19 @@
     <RootNamespace>AnBo.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="StringResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>StringResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="StringResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
