--- a/Test.Core/AnBo.BCL.Test.Core.csproj
+++ b/Test.Core/AnBo.BCL.Test.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\AnBo.BCL8.Core.csproj" />
+    <ProjectReference Include="..\Core\AnBo.BCL.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
