Changed the content of the file header. Added copyright und license,

--- a/Core/AnBo.BCL.Core.csproj
+++ b/Core/AnBo.BCL.Core.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>AnBo.Core</RootNamespace>
+    <BaseOutputPath>..\..\build\bin</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
