1. ArgFilePathException, ArgDirectorPathException, DirectoryPathTooLongException, FilePathTooLongException Klassen entfernt. Argumentenchecks sollen wenn möglich über die .NET eigenen Klassen, wie ArgumentException gelöst werden. 3. Alle Änderung hierzu in der Solution vorgenommen.

--- a/Core/AnBo.BCL.Core.csproj
+++ b/Core/AnBo.BCL.Core.csproj
@@ -23,4 +23,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Error\ArgumentExceptions\" />
+    <Folder Include="Error\IOExceptions\" />
+  </ItemGroup>
+
 </Project>
