--- a/Core/AnBo.BCL.Core.csproj
+++ b/Core/AnBo.BCL.Core.csproj
@@ -28,4 +28,8 @@
     <Folder Include="Error\IOExceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.7" />
+  </ItemGroup>
+
 </Project>
